ready for some integrations testing

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,19 +3,21 @@ include *.md
 include tox.ini
 include versioneer.py
 include src/lana/_version.py
-include src/lana/web/static/*
-include src/lana/web/html/*
+include *.js
 
-exclude *.example
 recursive-include dist *.gz
 recursive-include dist *.whl
 recursive-include src *.pyc
 recursive-include tests *.py
-recursive-include src *.js
+recursive-include src *.html
+recursive-include src *.png
+recursive-include src *.css
+recursive-include src *.sql
 
-
+exclude *.example
 exclude *.pyo
 exclude __pycache__
 exclude .gitignore
 exclude LICENSE
+exclude .env
 
